--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <div class="text-center mt-4 name">
             Login
         </div>
+        <div class="row texto_Invisivel" onclick="logo()">@@@@@@@@@@@@@@@@@</div>
         <form class="p-3 mt-3">
             <div class="form-field d-flex align-items-center">
                 <span class="far fa-user"></span>
